--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -149,6 +149,20 @@
   .btn{
     color: #fff;
     background-color: $darker-blue;
+    &--error {
+      color: #fff;
+      border-color: transparent;
+      background-color: $red;
+
+      &:hover {
+        background-color: $red;
+      }
+
+      &:focus {
+        border-color: transparent;
+        background-color: $red;
+      }
+    }
     &--empty-red{
       color: $red;
       border-color: $red;
