--- a/src/assets/scss/components/_row.scss
+++ b/src/assets/scss/components/_row.scss
@@ -7,6 +7,9 @@
   &--jcsb{
     justify-content: space-between;
   }
+  &--jcc{
+    justify-content: center;
+  }
   &--aic{
     align-items: center;
   }
