--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -30,8 +30,9 @@
         class="wrap-input__input"
         type="text"
         formControlName="pincode">
-      <label class="wrap-input__label">GA Security Code</label>
+      <label class="wrap-input__label">Pin code</label>
       <div class="wrap-input__line"></div>
+      <span style="display: inline-block; margin-top: 4px;">Check pin-code in your email</span>
     </div>
   </div>
 
