--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -38,10 +38,10 @@
               </div>
             </td>
             <td class="table__cell table__cell--tal">
-              <span>0.506</span>
+              <span>{{item.amountConvert}}</span>
             </td>
             <td class="table__cell table__cell--tar">
-              <div>1.1068069</div>
+              <div>{{item.exExchangeRate}}</div>
               <span class="txt-small txt-red">{{item.operationType}}</span>
             </td>
             <td class="table__cell table__cell--arr-mob">
@@ -57,7 +57,7 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Total Price</div>
-                <div class="table__details-item-value">{{item.exExchangeRate}} USD</div>
+                <div class="table__details-item-value">{{item.amountWithCommission}} USD</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Type</div>
@@ -147,16 +147,16 @@
             <a class="orders__market">{{item.currencyPairName}}</a>
           </td>
           <td class="table__cell">
-            <span class="orders__type-buy">{{item.operationType}}</span>
+            <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
           </td>
           <td class="table__cell">
-            <span>{{item.exExchangeRate}} BTC</span>
+            <span>{{item.amountConvert}} BTC</span>
           </td>
           <td class="table__cell">
             <span class="orders__for">for</span>
           </td>
           <td class="table__cell">
-            <span>{{item.amountConvert}} USD</span>
+            <span>{{item.exExchangeRate}} USD</span>
           </td>
           <td class="table__cell">
             <span class="orders__comission">{{item.commissionValue}}% </span><span class="orders__comission-usd">~<span>
@@ -166,7 +166,7 @@
             <span>{{item.amountWithCommission}} USD</span>
           </td>
           <td class="table__cell">
-            <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;" (click)="cancelOrder(item)">Cancel</button>
+            <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;" (click)="openPopup(item)">Cancel</button>
           </td>
         </tr>
       </tbody>
@@ -177,14 +177,15 @@
       <div class="show-filter">
         Showing <span>1</span> to
         <div class="dropdown" #dropdown (click)="toggleDropdown($event)">
-          <div class="dropdown__btn">14</div>
+          <div class="dropdown__btn">{{countPerPage}}</div>
           <ul class="dropdown__list">
+              <li class="dropdown__item" (click)="changeItemsPerPage($event)">14</li>
             <li class="dropdown__item" (click)="changeItemsPerPage($event)">24</li>
             <li class="dropdown__item" (click)="changeItemsPerPage($event)">34</li>
             <li class="dropdown__item" (click)="changeItemsPerPage($event)">44</li>
           </ul>
         </div>
-        of <span>192</span> entries.
+        of <span>{{countOfEntries}}</span> entries.
       </div>
       <ul class="paginator" style="margin-left: auto;">
         <pagination-controls (pageChange)="changePage($event)" [previousLabel]="''" [nextLabel]="''"></pagination-controls>
@@ -196,99 +197,21 @@
 </div>
 
 <!--popup start-->
-<div class="order-edit-popup" *ngIf="editOrderPopup">
+<div class="order-edit-popup" *ngIf="cancelOrderPopup">
   <div class="order-edit-popup__content order-edit-popup__content--mob"></div>
   <div class="order-edit-popup__content">
-    <div class="order-edit-popup__title">Edit order <span>#{{order.orderId}}</span></div>
+      <div class="order-edit-popup__title"><h2>Are you sure you want to cancel selected order?</h2></div>
+    <div class="order-edit-popup__title">Cancel order <span>#{{orderId}}</span></div>
     <div class="order-edit-popup__close" (click)="closePopup()">
       <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M7.35355 1.35355C7.54882 1.15829 7.54882 0.841709 7.35355 0.646447C7.15829 0.451184 6.84171 0.451184 6.64645 0.646447L7.35355 1.35355ZM0.646447 6.64645C0.451184 6.84171 0.451184 7.15829 0.646447 7.35355C0.841709 7.54882 1.15829 7.54882 1.35355 7.35355L0.646447 6.64645ZM1.35355 0.646447C1.15829 0.451184 0.841709 0.451184 0.646447 0.646447C0.451184 0.841709 0.451184 1.15829 0.646447 1.35355L1.35355 0.646447ZM6.64645 7.35355C6.84171 7.54882 7.15829 7.54882 7.35355 7.35355C7.54882 7.15829 7.54882 6.84171 7.35355 6.64645L6.64645 7.35355ZM6.64645 0.646447L0.646447 6.64645L1.35355 7.35355L7.35355 1.35355L6.64645 0.646447ZM0.646447 1.35355L6.64645 7.35355L7.35355 6.64645L1.35355 0.646447L0.646447 1.35355Z" />
       </svg>
     </div>
 
-
-    <form [formGroup]="limitForm" *ngIf="dropdownLimitValue === 'LIMIT' || dropdownLimitValue === 'ICO' ">
-
-      <div class="row row--jcsb widget__trading-row">
-
-        <div class="wrap-input widget__input widget__input--mr32">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.amount" formControlName="quantityOf" (input)="quantityInput($event)"
-            name="quantityOf">
-          <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
-          <div class="wrap-input__line"></div>
-        </div>
-
-        <div class="wrap-input widget__input">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.rate" (input)="rateInput($event)"
-            formControlName="priceIn" name="priceIn">
-          <label class="wrap-input__label" for="">Price in {{arrPairName[1]}}</label>
-          <div class="wrap-input__line"></div>
-        </div>
-
-      </div>
-
-      <div class="row row--jcsb widget__trading-row">
-        <div class="wrap-input widget__input">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.total" formControlName="totalIn" name="totalIn">
-          <label class="wrap-input__label" for="">Total in {{arrPairName[1]}}</label>
-          <div class="wrap-input__line"></div>
-        </div>
-      </div>
-
-    </form>
-    <form [formGroup]="stopForm" *ngIf="dropdownLimitValue === 'STOP_LIMIT'">
-      <div class="row row--jcsb widget__trading-row">
-        <div class="wrap-input widget__input widget__input--mr32">
-          <input class="wrap-input__input" type="text" [(ngModel)]="orderStop" formControlName="stop" name="stop">
-          <label class="wrap-input__label" for="">Stop</label>
-          <div class="wrap-input__line"></div>
-        </div>
-        <div class="wrap-input widget__input">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.rate" (input)="rateInput($event)"
-            formControlName="limit" name="limit">
-          <label class="wrap-input__label" for="">Limit</label>
-          <div class="wrap-input__line"></div>
-        </div>
-      </div>
-      <div class="row row--jcsb widget__trading-row">
-        <div class="wrap-input widget__input widget__input--mr32">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.amount" formControlName="quantityOf" (input)="quantityInput($event)"
-            name="quantityOf">
-          <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
-          <div class="wrap-input__line"></div>
-        </div>
-        <div class="wrap-input widget__input">
-          <input class="wrap-input__input" type="text" [(ngModel)]="order.total" formControlName="totalIn" name="totalIn">
-          <label class="wrap-input__label" for="">Total in {{arrPairName[1]}}</label>
-          <div class="wrap-input__line"></div>
-        </div>
-      </div>
-    </form>
-
-    <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
-      <div class="avaliable" style="margin-top: 0;">
-        <span>
-          <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z" />
-          </svg>
-        </span>
-        <span style="vertical-align: middle; color:#A0A0A0;">Avaliable: </span>
-        <a href="#">300 000 000 {{arrPairName[0]}}</a>
-      </div>
-      <div>
-        Fee: {{order.commission}} {{arrPairName[0]}}
-      </div>
-    </div>
     <div class="row row--jcsb row--aic widget__trading-row">
-      <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}" (click)="toggleLimitDropdown()">
-        <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
-        <ul class="dropdown__list">
-          <li class="dropdown__item" *ngFor="let limit of limitsData" (click)="selectedLimit(limit)">{{showLimit(limit)}}</li>
-        </ul>
-      </div>
       <div class="order-edit-popup__btns-wrap">
-        <button class="btn btn--small btn--empty-red" (click)="deleteOrder(order)">Delete</button>
-        <button class="btn btn--small btn--empty-blue" (click)="saveOrder()">Save</button>
+        <button class="btn btn--small btn--empty-red" (click)="closePopup()">Cancel</button>
+        <button class="btn btn--small btn--empty-blue" (click)="cancelOrder()">Yes</button>
       </div>
     </div>
   </div>
