registration without final

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,7 +131,7 @@
       <a class="header__logout" (click)="onLogout()">Log out</a>
     </div>
     <ng-template #alien>
-      <a class="header__logout" (click)="onLogin()">Log in</a>
+      <a class="header__logout" (click)="onMobileLogin()">Log in</a>
     </ng-template>
 
     <ul class="menu">
