--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -33,99 +33,39 @@
         </div>
       </div>
 
-      <button class="btn popup__btn" (click)="emailSubmit()">Create an account</button>
+      <button class="btn popup__btn" (click)="emailSubmit()"
+      [ngClass]="{'bg-none': emailForm.valid && agreeTerms}" [disabled]="!emailForm.valid && !agreeTerms"
+      >Create an account</button>
     </form>
     <div class="popup__links-wrap">
+      <input type="checkbox" [(ngModel)]="agreeTerms" [disabled]="!emailForm.valid">
       <a class="popup__link" ><span>By registering you agree with</span> Terms of Use</a>
     </div>
+      <div class="popup__links-wrap">
+        <a class="popup__link" ><span>Already have an account?</span> Log in</a>
+      </div>
 
     <a class="popup__link-mob" (click)="openLogIn()">Log in</a>
   </ng-template>
 
-    <ng-template #nameInputTemplate>
-      <h6 class="popup__title">Registration</h6>
-      <h4 class="popup__subtitle"></h4>
-      <form class="popup__form" [formGroup]="nameForm">
-        <div >
-          <div class="wrap-input popup__wrap-input">
-            <input
-              class="wrap-input__input"
-              type="text"
-              formControlName="username"
-              [ngClass]="{'input--error': !nameForm.get('username').valid && nameForm.get('username').touched}"
-            >
-            <label class="wrap-input__label" for="">First name</label>
-            <div class="wrap-input__line"></div>
-
-            <div *ngIf="!nameForm.valid && nameSubmited">
-            <span class="wrap-input__message" *ngIf="nameForm.get('username').errors['required']">
-              This field is required.
-            </span>
-            </div>
-          </div>
-        </div>
-
-        <button class="btn popup__btn" (click)="nameSubmit()">Create an account</button>
-      </form>
-      <div class="popup__links-wrap">
-        <a class="popup__link" href="#"><span>By registering you agree with</span> Terms of Use</a>
-      </div>
-      <a class="popup__link-mob" (click)="openLogIn()">Log in</a>
-    </ng-template>
 
     <ng-template #captchaTemplate>
-      <h6 class="popup__title">Enter the captcha</h6>
-      <div class="captcha">captcha</div>
+      <h6 class="popup__title">Registration</h6>
+      <re-captcha (resolved)="resolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
       <div class="popup__links-wrap">
-        <a class="popup__link" href="#">Go to registration form</a>
+        <a class="popup__link" (click)="setTemplate('emailInputTemplate')">Go to registration form</a>
       </div>
-      <a (click)="setTemplate('emailConfirmLinkTemplate')">next</a>
     </ng-template>
 
     <ng-template #emailConfirmLinkTemplate>
       <h6 class="popup__title">Confirm the email</h6>
       <h4 class="popup__subtitle">We sent the confirmation link to
-        very_beautifull_email@gmail.com <br> Please check your email and
+        {{email}} <br> Please check your email and
         follow instructions.</h4>
-      <hr>
+      <hr style="width: 70%;">
       <div class="popup__links-wrap">
         <a class="popup__link"><span>If you haven't received the email, do the following:</span><br><span>Check spam or other folders.<br>Set email address whitelist.</span>
           How to set?<span><br>Check the mail client works normally.</span></a>
-      </div>
-      <a (click)="setTemplate('passwordTemplate')">next</a>
-    </ng-template>
-
-    <ng-template #passwordTemplate>
-      <h6 class="popup__title">Email confirmed</h6>
-      <h4 class="popup__subtitle">Now, we need to create <br> strong password.</h4>
-      <form class="popup__form">
-        <div >
-          <div class="wrap-input popup__wrap-input">
-            <input
-              class="wrap-input__input"
-              type="password"
-            >
-            <label class="wrap-input__label" for="">Password</label>
-            <div class="wrap-input__line">Should have 8 chars at least, symbols
-              and numbers</div>
-            <!--Input error section starts-->
-            <div>
-            <span class="wrap-input__message">
-              This field is required.
-            </span>
-              <span
-                class="wrap-input__message">
-              Please, enter valid email address.
-            </span>
-            </div>
-            <!--Input error section ends-->
-          </div>
-        </div>
-
-        <button class="btn popup__btn" >Create an account</button>
-      </form>
-      <div class="popup__links-wrap">
-        <a class="popup__link" href="#"><span>By registering you agree with</span> Terms of Use</a>
       </div>
     </ng-template>
 
