add summary popup

--- a/src/app/referral/referral-structure/referral-structure.component.html
+++ b/src/app/referral/referral-structure/referral-structure.component.html
@@ -539,7 +539,68 @@
           </div>
         </div>
       </div>
-      <div class="summary-popup__body"></div>
+      <div class="summary-popup__body">
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/eth-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">ETH</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/iota-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">IOTA</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/eth-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">ETH</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/iota-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">IOTA</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/eth-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">ETH</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/iota-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">IOTA</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+        <div class="summary-popup__item">
+          <img src="../../assets/img/btc-icon.svg" class="summary-popup__item-icon">
+          <span class="summary-popup__item-name">BTC</span>
+          <span class="summary-popup__item-value">45.27026255</span>
+        </div>
+      </div>
     </div>
   </div>
   <!--referral desktop end-->
