--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -34,14 +34,20 @@
 
       </ng-scrollbar>
     </div>
-
-    <div class="widget__send-message">
-      <input class="widget__send-input" type="text" required="" placeholder="Text your message here" #chatInput>
-      <span class="widget__input-img widget__input-img--hide-mob widget__input-img--second-icon"><img src="../../assets/img/smiley.svg"></span>
-      <!--<span class="widget__input-img"><img src="../../assets/img/send-message.svg"></span>-->
-      <a class="widget__input-img" href="https://t.me/exrates_official" target="_blank"><img src="../../assets/img/send-message.svg"></a>
-      <!--<span class="widget__input-img" (click)="onSendChatMessage(chatInput)"><img src="../../assets/img/send-message.svg"></span>-->
-    </div>
+    <button class="btn widget__chat-btn">
+      <span class="btn__icon btn__icon--blue">
+        <svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M14.8715 3.76389L7.80998 10.5092C7.56185 10.7462 7.40152 11.0644 7.35618 11.4094L7.11589 13.241C7.08388 13.4854 6.74925 13.51 6.68366 13.2728L5.75856 9.93274C5.65299 9.55154 5.80691 9.14455 6.13527 8.93669L14.6916 3.52085C14.8451 3.42377 15.0036 3.63767 14.8715 3.76389ZM18.2978 0.0364161L0.330292 7.1593C-0.112657 7.33493 -0.109259 7.98025 0.335518 8.15092L4.71339 9.83029L6.40809 15.4306C6.51667 15.7893 6.94368 15.9215 7.22696 15.6841L9.66735 13.6397C9.92319 13.4254 10.2872 13.4149 10.5543 13.6142L14.9562 16.8984C15.2592 17.1245 15.6884 16.954 15.7646 16.5772L18.9887 0.638907C19.072 0.227892 18.6791 -0.114777 18.2978 0.0364161Z"/>
+        </svg>
+      </span>
+      Join our chanel</button>
+    <!--<div class="widget__send-message">-->
+      <!--<input class="widget__send-input" type="text" required="" placeholder="Text your message here" #chatInput>-->
+      <!--<span class="widget__input-img widget__input-img&#45;&#45;hide-mob widget__input-img&#45;&#45;second-icon"><img src="../../assets/img/smiley.svg"></span>-->
+      <!--&lt;!&ndash;<span class="widget__input-img"><img src="../../assets/img/send-message.svg"></span>&ndash;&gt;-->
+      <!--<a class="widget__input-img" href="https://t.me/exrates_official" target="_blank"><img src="../../assets/img/send-message.svg"></a>-->
+      <!--&lt;!&ndash;<span class="widget__input-img" (click)="onSendChatMessage(chatInput)"><img src="../../assets/img/send-message.svg"></span>&ndash;&gt;-->
+    <!--</div>-->
 
   </div>
 </div>
