--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -28,7 +28,7 @@
     </div> -->
     <div class="order-table" [ngClass]="orderTypeClass">
       <div class="head">
-        <div class="order table__cell-head table__cell-head--tal table__cell-head--p4">
+        <div class="order table__cell-head table__cell-head--tal table__cell-head--p4 table__cell-head--blue">
           <span>
             Amount
           </span>
