--- a/src/app/dashboard/trading/buy/buy.component.html
+++ b/src/app/dashboard/trading/buy/buy.component.html
@@ -57,7 +57,7 @@
     </div>
     <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
       <div class="avaliable">
-        <span style="vertical-align: middle;">Avaliable: </span>
+        <!--<span style="vertical-align: middle;">Avaliable: </span>-->
         <a href="#">300 000 000 USD</a>
       </div>
       <div>
