--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -132,8 +132,6 @@
   &__content {
     display: none;
     position: relative;
-    overflow-x: hidden;
-    overflow-y: auto;
     &--mob {
       display: block;
       //height: 100%;
@@ -417,6 +415,16 @@
     -moz-border-radius: 4px;
     border-radius: 4px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  }
+  &__chat-btn{
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 32px);
+    max-width: none;
+    margin: 0 16px;
+    font-size: 14px;
+    height: 36px;
+    line-height: 36px;
   }
   &__send-input {
     display: block;
@@ -713,6 +721,10 @@
       -moz-border-radius: 4px;
       border-radius: 4px;
     }
+    &__chat-btn{
+      font-size: 24px;
+      height: 53px;
+    }
     &__input-img {
       &--hide-mob {
         display: inline-block;
@@ -782,6 +794,7 @@
     &__trading-btn {
       max-width: none;
       height: 53px;
+      line-height: 53px;
       font-size: 24px;
       margin: 44px 0 0;
     }
@@ -1015,6 +1028,11 @@
         }
       }
       .wrap-input__input {
+        &:not([value=""]){
+          ~ .wrap-input__label {
+            background-color: #2B3256;
+          }
+        }
         &:focus {
           ˜.wrap-input__label {
             background-color: #2B3256;
@@ -1030,6 +1048,9 @@
         thead{
           background-color: transparent;
         }
+      }
+      .trade-history-time{
+        color:#959BA5;
       }
     }
   }
