--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -5,6 +5,7 @@
       <div class=" orders__page-title">
         Orders history
       </div>
+      <div class="orders__amount">{{countOfEntries}}</div>
       <div class="orders__filter-btn" (click)="openFilterPopup()">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
@@ -25,7 +26,7 @@
           <th class="table__cell-head table__cell-head--tar">Avg.Price</th>
         </tr>
       </thead>
-      <tbody class="table__body table__body--none-shadow">
+      <tbody class="table__body table__body--none-shadow" *ngIf="orderHistory">
         <!-- t-row start-->
         <ng-container *ngFor="let item of orderHistory">
           <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
@@ -54,11 +55,11 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Trading price</div>
-                <div class="table__details-item-value">0.001221 {{arrPairName[1]}}</div>
+                <div class="table__details-item-value">{{item.exExchangeRate}} {{arrPairName[1]}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Filled</div>
-                <div class="table__details-item-value">0.001221 {{arrPairName[1]}}</div>
+                <div class="table__details-item-value">{{item.exExchangeRate}} {{arrPairName[1]}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Fee</div>
@@ -89,7 +90,7 @@
       </div>
       <form action="#">
         <div class="wrap-input wrap-input--with-icon filters-popup__search">
-          <input class="wrap-input__input" type="text" required>
+          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
           <label class="wrap-input__label" for="">Search</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -108,7 +109,7 @@
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">To</label>
 
-            <my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>
+            <my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)"></my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
@@ -137,12 +138,17 @@
     <form action="">
       <div class="row orders__filter">
         <div class="wrap-input wrap-input--with-icon orders__search">
-          <input class="wrap-input__input" type="text" required>
+          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
           <label class="wrap-input__label" for="">Currency</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
+          </div>
+          <div class="search-results dropdown search">
+            <ul class="dropdown__list">
+              <li *ngFor="let item of pairs" (click)="selctNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>
+            </ul>
           </div>
           <div class="wrap-input__line"></div>
         </div>
@@ -174,53 +180,12 @@
           <th class="table__cell-head table__cell-head--tar">In total</th>
         </tr>
       </thead>
-      <tbody class="table__body">
-        <tr class="table__row" *ngFor="let item of orderHistory | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
+      <tbody class="table__body" *ngIf="orderHistory">
+        <tr class="table__row" *ngFor="let item of filteredOrderHistory | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
           <td class="table__cell">
             <div class="table__date-time">
               <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
               <div>{{item.dateCreation | date:"HH:mm:ss"}}</div>
-            </div>
-          </td>
-          <td class="table__cell">
-            <div class="orders__pair-wrap">
-              <div class="orders__pair">
-                <div class="orders__pair-icon">
-                  <img src="../../assets/img/btc-icon.svg">
-                </div>
-                <span>{{arrPairName[0]}}</span>
-              </div>
-              <span style="margin: 0 8px;">/</span>
-              <div class="orders__pair">
-                <div class="orders__pair-icon">
-                  <img src="../../assets/img/eth-icon.svg">
-                </div>
-                <span>{{arrPairName[1]}}</span>
-              </div>
-            </div>
-          </td>
-          <td class="table__cell">
-            <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
-          </td>
-          <td class="table__cell">
-            <span>{{item.exExchangeRate}} USD</span>
-          </td>
-          <td class="table__cell">
-            <span>{{item.amountConvert}} {{arrPairName[0]}}</span>
-          </td>
-          <td class="table__cell">
-            <span class="orders__comission">{{item.commissionAmountForAcceptor}}% </span><span class="orders__comission-usd">~<span>
-                0.00015 USD</span></span>
-          </td>
-          <td class="table__cell table__cell--tar">
-            <span>{{item.amountWithCommission}}<span> {{arrPairName[1]}}</span></span>
-          </td>
-        </tr>
-        <tr class="table__row">
-          <td class="table__cell">
-            <div class="table__date-time">
-              <div>Th 13.06.2018</div>
-              <div>10:59:41</div>
             </div>
           </td>
           <td class="table__cell">
@@ -241,19 +206,20 @@
             </div>
           </td>
           <td class="table__cell">
-            <span class="orders__type-buy">Buy (limit)</span>
+            <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
           </td>
           <td class="table__cell">
-            <span>4500 USD</span>
+            <span>{{item.exExchangeRate}} USD</span>
           </td>
           <td class="table__cell">
-            <span>0.005 BTC</span>
+            <span>{{item.amountConvert}} {{arrPairName[0]}}</span>
           </td>
           <td class="table__cell">
-            <span class="orders__comission">30% </span><span class="orders__comission-usd">~<span> 0.00015 USD</span></span>
+            <span class="orders__comission">{{item.commissionAmountForAcceptor}}% </span><span class="orders__comission-usd">~<span>
+                0.00015 USD</span></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>0,00005303869<span> {{arrPairName[1]}}</span></span>
+            <span>{{item.amountWithCommission}}<span> {{arrPairName[1]}}</span></span>
           </td>
         </tr>
       </tbody>
