--- a/src/app/orders/orders-history/orders-history.component.scss
+++ b/src/app/orders/orders-history/orders-history.component.scss
@@ -145,3 +145,24 @@
   .show-filter-popup {
     display: block !important;
   }
+
+    // search dropdown
+
+    .orders__search {
+      .search-results {
+        left: 60px;
+        .dropdown__list {
+          max-height: 170px;
+          overflow-x: unset;
+          overflow-y: scroll;
+        }
+      }
+  
+      &:hover {
+        .search-results {
+          .dropdown__list {
+            display: block;
+          }
+        }
+      }
+    }
