--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -724,6 +724,7 @@
     &__chat-btn{
       font-size: 24px;
       height: 53px;
+      bottom: 4px;
     }
     &__input-img {
       &--hide-mob {
