--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -54,7 +54,7 @@
     &__title-btn{
       margin-left: 32px;
     }
-    &__filters{
+    &__filter{
       position: relative;
       margin-top: 28px;
       &:after{
